--- a/Real_Madrid_Performance_season_2023_2024.ipynb
+++ b/Real_Madrid_Performance_season_2023_2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "10MHud7SJ4C5pQEXCUFpeCrssxbU34bC0",
-      "authorship_tag": "ABX9TyNz00/sYrG3sWdUXpmYuPCC",
+      "authorship_tag": "ABX9TyPz+QpVaU+MGSlSqTdvJCYu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3056,9 +3056,9 @@
           "height": 607
         },
         "id": "cM-38Q58POdY",
-        "outputId": "d46c102f-fd90-4b4a-d0d6-1392fae7c2bf"
+        "outputId": "c8875001-7848-4c13-fe9a-808d93675ace"
       },
-      "execution_count": 47,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3071,6 +3071,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Formasi 4-3-1-2 menghasilkan paling banyak kemenangan di semua kompetisi\n",
+        "- Di La Liga, hampir semua formasi pernah dipakai dan jumlah kemenangan yang variatif, menandakan madrid sangat fleksibel dan adaptif di liga\n",
+        "- Di Liga Champions Eropa, Sebagian besar kemenangan diraih ketika bermain dengan formasi 4-3-1-2 maupun 4-2-2-2\n",
+        "- Dengan kemenangan terbanyak, maka formasi 4-3-1-2 paling sering dimainkan oleh real madrid\n",
+        "- Real Madrid juga memiliki formasi alternatif seperti 4-2-2-2 maupun 4-2-3-1 tergantung dari strategi lawan dan situasi pertandingan"
+      ],
+      "metadata": {
+        "id": "KnAiOGhvRMkc"
+      }
     },
     {
       "cell_type": "markdown",
